--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "fix": "prettier --write .",
+    "check": "prettier --check ."
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.32",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3"
   }
 }
