--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@ai-sdk/openai": "^1.3.21",
+    "@slack/bolt": "^4.2.1",
     "@slack/web-api": "^7.9.1",
     "@vercel/functions": "^2.0.1",
     "ai": "^4.3.13",
