--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "fix": "prettier --write .",
-    "check": "prettier --check ."
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "@slack/bolt": "^4.2.1",
     "@vercel/functions": "^2.0.1",
     "ai": "^4.3.13",
+    "md-to-slack": "^1.0.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
