--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/functions": "^2.0.1",
     "ai": "^4.3.13",
     "marked": "^15.0.11",
+    "slackify-markdown": "^4.4.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
