--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@slack/bolt": "^4.2.1",
     "@vercel/functions": "^2.0.1",
     "ai": "^4.3.13",
+    "jsonrepair": "^3.12.0",
     "marked": "^15.0.11",
     "slackify-markdown": "^4.4.0",
     "zod": "^3.24.3"
