--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,6 @@
 SLACK_BOT_TOKEN=xoxb-your-bot-token        # Bot User OAuth Token from OAuth & Permissions
 SLACK_SIGNING_SECRET=your-signing-secret   # Signing Secret from Basic Information
 
-# OpenAI Credentials
-# Get this from your OpenAI account at https://platform.openai.com/api-keys
-OPENAI_API_KEY=your-openai-api-key
-EXA_API_KEY=your-exa-api-key
+# Google Gemini Credentials
+# Get this from your Google AI Studio at https://aistudio.google.com/app/apikey
+GOOGLE_GENERATIVE_AI_API_KEY=your-gemini-api-key
