--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "test": "node test-bot.js",
+    "dev": "vercel dev",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
@@ -13,10 +15,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.21",
+    "@ai-sdk/google": "^1.2.22",
     "@slack/bolt": "^4.2.1",
     "@vercel/functions": "^2.0.1",
     "ai": "^4.3.13",
+    "dotenv": "^17.2.1",
     "jsonrepair": "^3.12.0",
     "marked": "^15.0.11",
     "slackify-markdown": "^4.4.0",
