feat: Complete dual-bot system - Cody (Admin) + Riley (Help Desk)
- Add Riley bot API endpoint (/api/events-riley.ts) with dedicated credentials
- Implement persona system with distinct personalities for Cody and Riley
- Expand knowledge base with comprehensive sales training materials:
  * Lead generation playbook with Facebook Marketplace templates
  * Agent tips and success strategies
  * Objection handling scripts and tier upselling guides
  * Onboarding templates and sales resource hub
- Update AI system to support persona-based responses with 100-word limits
- Configure Vercel routing for dual-bot deployment
- Fix TypeScript compilation errors and optimize response generation
- Achieve 100% test success rate for both personas

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,20 @@
   "functions": {
     "api/events.ts": {
       "maxDuration": 60
+    },
+    "api/events-riley.ts": {
+      "maxDuration": 60
     }
   },
+  "rewrites": [
+    {
+      "source": "/api/events/cody",
+      "destination": "/api/events"
+    },
+    {
+      "source": "/api/events/riley",
+      "destination": "/api/events-riley"
+    }
+  ],
   "outputDirectory": "dist"
 }
